@@ -20,7 +20,6 @@ import ru.practicum.request.dto.RequestStatusDto;
 import ru.practicum.request.dto.RequestUpdateStatusDto;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -45,22 +44,22 @@ public class EventPrivateControllerTest {
     @BeforeEach
     public void setup() {
         newEventDto = new NewEventDto();
-        newEventDto.setAnnotation("annotation");
+        newEventDto.setAnnotation("Annotation");
         newEventDto.setCategory(1L);
-        newEventDto.setDescription("description");
+        newEventDto.setDescription("Description");
         newEventDto.setEventDate(LocalDateTime.now());
         newEventDto.setPaid(false);
         newEventDto.setParticipantLimit(10L);
         newEventDto.setRequestModeration(true);
-        newEventDto.setTitle("title");
+        newEventDto.setTitle("Title");
 
         eventFullDto = new EventFullDto();
         eventFullDto.setId(1L);
-        eventFullDto.setAnnotation("annotation");
+        eventFullDto.setAnnotation("Annotation");
         eventFullDto.setCategory(new ru.practicum.category.dto.CategoryDto());
         eventFullDto.setConfirmedRequests(0L);
         eventFullDto.setCreatedOn(LocalDateTime.now());
-        eventFullDto.setDescription("description");
+        eventFullDto.setDescription("Description");
         eventFullDto.setEventDate(LocalDateTime.now());
         eventFullDto.setInitiator(new ru.practicum.user.dto.UserShortDto());
         eventFullDto.setLocation(new ru.practicum.event.model.Location());
@@ -69,18 +68,18 @@ public class EventPrivateControllerTest {
         eventFullDto.setPublishedOn(LocalDateTime.now());
         eventFullDto.setRequestModeration(true);
         eventFullDto.setState(ru.practicum.event.model.State.PENDING);
-        eventFullDto.setTitle("title");
+        eventFullDto.setTitle("Title");
         eventFullDto.setViews(0L);
 
         eventUserRequestDto = new EventUserRequestDto();
-        eventUserRequestDto.setAnnotation("annotation");
+        eventUserRequestDto.setAnnotation("Annotation");
         eventUserRequestDto.setCategory(1L);
-        eventUserRequestDto.setDescription("description");
+        eventUserRequestDto.setDescription("Description");
         eventUserRequestDto.setEventDate(LocalDateTime.now());
         eventUserRequestDto.setPaid(false);
         eventUserRequestDto.setParticipantLimit(10L);
         eventUserRequestDto.setRequestModeration(true);
-        eventUserRequestDto.setTitle("title");
+        eventUserRequestDto.setTitle("Title");
 
         requestUpdateStatusDto = new RequestUpdateStatusDto();
         requestUpdateStatusDto.setRequestIds(Collections.emptySet());
@@ -89,8 +88,8 @@ public class EventPrivateControllerTest {
 
     @Test
     public void addEventTest() throws Exception {
-        newEventDto.setDescription("Описание события, которое должно быть не менее 20 символов");
-        newEventDto.setAnnotation("Аннотация события, которое должно быть не менее 20 символов");
+        newEventDto.setDescription("12345 12345 12345 12345");
+        newEventDto.setAnnotation("12345 12345 12345 12345");
         newEventDto.setLocation(new Location(1L, 10.0f, 20.0f));
 
         when(eventService.addEvent(anyLong(), any(NewEventDto.class))).thenReturn(eventFullDto);
@@ -115,7 +114,7 @@ public class EventPrivateControllerTest {
 
     @Test
     public void getEventsByUserTest() throws Exception {
-        List<EventShortDto> eventShortDtos = Arrays.asList(new EventShortDto());
+        List<EventShortDto> eventShortDtos = List.of(new EventShortDto());
         when(eventService.getEventsByUser(anyLong(), anyInt(), anyInt(), any())).thenReturn(eventShortDtos);
         mockMvc.perform(get("/users/1/events")
                         .param("from", "0")
@@ -127,8 +126,8 @@ public class EventPrivateControllerTest {
 
     @Test
     public void updateEventTest() throws Exception {
-        eventUserRequestDto.setAnnotation("Annotation of the event, which should be at least 20 characters");
-        eventUserRequestDto.setDescription("Description of the event, which should be at least 20 characters");
+        eventUserRequestDto.setAnnotation("12345 12345 12345 12345 12345");
+        eventUserRequestDto.setDescription("12345 12345 12345 12345 12345");
 
         when(eventService.updateEvent(anyLong(), anyLong(), any(EventUserRequestDto.class))).thenReturn(eventFullDto);
 
@@ -142,7 +141,7 @@ public class EventPrivateControllerTest {
 
     @Test
     public void getRequestByEventIdTest() throws Exception {
-        List<RequestDto> requestDtos = Arrays.asList(new RequestDto());
+        List<RequestDto> requestDtos = List.of(new RequestDto());
         when(eventService.getRequestsByEventId(anyLong(), anyLong())).thenReturn(requestDtos);
 
         mockMvc.perform(get("/users/1/events/1/requests"))
@@ -154,7 +153,8 @@ public class EventPrivateControllerTest {
     @Test
     public void updateRequestByEventIdTest() throws Exception {
         RequestStatusDto requestStatusDto = new RequestStatusDto();
-        when(eventService.updateRequestByEventId(anyLong(), anyLong(), any(RequestUpdateStatusDto.class))).thenReturn(requestStatusDto);
+        when(eventService.updateRequestByEventId(anyLong(), anyLong(), any(RequestUpdateStatusDto.class)))
+                .thenReturn(requestStatusDto);
 
         mockMvc.perform(patch("/users/1/events/1/requests")
                         .contentType(MediaType.APPLICATION_JSON)
